2012-08-13  TANAKA Takuji <KXD02663@nifty.ne.jp>

	* uptex-m.ch, upbibtex.ch, updvitype.ch, uppltotf.ch, uptftopl.ch,
	uptex_version.h: upTeX version u1.11.

2012-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/uptex.am: Clarify *tex_version.h dependencies.

2012-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/uptex.am: Distribute uptex_version.h.
	* uptexextra.h: Use ../ptexdir/ptex_version.h.

2012-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* upbibtex.ch, updvitype.ch, uppltotf.ch, uptftopl.ch:
	Adapt to the use my_name.

2012-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* uptexextra.c: Must #define DLLPROC before reading uptexd.h.

2012-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* uptexextra.c [W32TeX]: #define DLLPROC for uptex.dll.

2012-05-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* updvitype.test: Cope with spaces in paths returned by
	kpsewhich.

2012-05-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* uptex-m.ch: Restore the 'unnecessary and seemingly wrong'
	changes; they are required to show the error context.
	* uptrip/uptrip.diffs: Adapted.

2012-04-29  Takuji Tanaka  <KXD02663@nifty.ne.jp>

	* uptex-m.ch, uppltotf.ch uptftopl.ch, updvitype.ch, upbibtex.ch:
	Update upTeX version number.

	* uptex-m.ch, kanji.c:
	Update reference of Unicode blocks to
	"Blocks-6.1.0.txt Date: 2011-06-14, 18:26:00 GMT [KW, LI]".

2012-03-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* uptex-m.ch: remove unnecessary and seemingly wrong changes

2012-03-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* uptex-m.ch: fix a long-remained bug in show_context.

2012-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* uppltotf.ch: Use ustringcast(buffer).
	* uptex-m.ch: Use ustringcast for buffer and str_pool.

2012-01-15  Takuji Tanaka  <KXD02663@nifty.ne.jp>

	* uptex-m.ch, uppltotf.ch uptftopl.ch, updvitype.ch, upbibtex.ch:
	Update upTeX version number.

	* uptex-m.ch, kanji.c: